--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <header>
       <ul class="tabs">
         <li class="tabs__item">Posts</li>
-        <li class="tabs__item">Categories</li>
+        <li class="tabs__item">Archive</li>
       </ul>
     </header>
 
@@ -54,11 +54,8 @@ layout: default
         </div>
       {% endif %}
 
-      {% include archive-link.html %}
-
     </div>
-
-    {% include archive-link.html %}
+  {% include archive-link.html %}
 
   </div>
 
