--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <header>
       <ul class="tabs">
         <li class="tabs__item">Posts</li>
-        <li class="tabs__item"><a href="#/archive/">Archive</a></li>
+        <li class="tabs__item"><a href="archive/">Archive</a></li>
       </ul>
     </header>
 
